# edge-domain

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  architecture.toml  bootstrap.ps1  struct.toml
main/domain/: Cargo.toml
main/domain/config/: application.toml
main/domain/examples/: custom_event_bus.rs  event_bus_consumer.rs  handler_registry.rs
main/domain/tests/: domain_svc_int_test.rs  handler_registry_int_test.rs
scm/: .gitignore  CHANGELOG.md  Cargo.toml  arch_out.txt  audit_final.txt  audit_output.txt
scm/app/: README.md
scm/app/tests/: app_runtime_e2e_test.rs  app_runtime_svc_int_test.rs  app_service_provider_svc_factory_int_test.rs  application_svc_factory_int_test.rs  application_svc_int_test.rs  bootstrap_e2e_test.rs  bootstrap_svc_int_test.rs  noop_app_bootstrap_int_test.rs  noop_app_runtime_int_test.rs  noop_app_svc_factory_int_test.rs  noop_application_int_test.rs
scm/base/: CHANGELOG.md  Cargo.toml  README.md
scm/base/examples/: basic.rs
scm/base/tests/: api_e2e_test.rs  command_bus_e2e_test.rs  command_bus_svc_factory_int_test.rs  command_bus_svc_int_test.rs  command_dispatch_request_int_test.rs  command_e2e_test.rs  command_svc_factory_int_test.rs  command_svc_int_test.rs  counter_e2e_test.rs  counter_svc_factory_int_test.rs  counter_svc_int_test.rs  empty_response_int_test.rs  gauge_e2e_test.rs  gauge_svc_factory_int_test.rs  gauge_svc_int_test.rs  handler_tracer_e2e_test.rs  handler_tracer_svc_factory_int_test.rs  handler_tracer_svc_int_test.rs  histogram_e2e_test.rs  histogram_svc_factory_int_test.rs  histogram_svc_int_test.rs  log_drain_e2e_test.rs  log_drain_svc_factory_int_test.rs  log_drain_svc_int_test.rs  metric_registry_e2e_test.rs  metric_registry_svc_factory_int_test.rs  metric_registry_svc_int_test.rs  observer_context_e2e_test.rs  observer_context_svc_factory_int_test.rs  observer_context_svc_int_test.rs  request_error_int_test.rs  request_svc_factory_int_test.rs  request_svc_int_test.rs  response_error_int_test.rs  response_svc_int_test.rs  security_principal_e2e_test.rs  security_principal_int_test.rs  security_principal_svc_factory_int_test.rs  security_principal_svc_int_test.rs  span_e2e_test.rs  (+2 more)
scm/clock/tests/: clock_e2e_test.rs  clock_svc_int_test.rs  fixed_clock_int_test.rs  system_clock_int_test.rs
scm/command/: Cargo.toml  README.md
scm/command/tests/: command_bus_svc_factory_int_test.rs  command_dispatch_request_int_test.rs  (+5 more)
scm/docs/: epic-edge-domain-prompt-arch-remediation.md  issue-edge-domain-prompt-adr-alignment-tasks.md  issue-edge-domain-prompt-adr-alignment.md
scm/domain-agent/: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  bootstrap.sh  deny.toml
scm/domain-app/: CHANGELOG.md  Cargo.toml
scm/domain-base/: CHANGELOG.md
scm/domain-clock/: Cargo.toml  README.md
scm/domain-command/: Cargo.toml
scm/domain-entity/: Cargo.toml  README.md
scm/domain-event/: Cargo.toml
scm/domain-handler/: CHANGELOG.md  Cargo.toml
scm/domain-lifecycle/: Cargo.toml
scm/domain-observe/: Cargo.toml
scm/domain-observer/: CHANGELOG.md  Cargo.toml  README.md
scm/domain-pipeline/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  bootstrap.ps1  bootstrap.sh  deny.toml
scm/domain-policy/: Cargo.toml
scm/domain-projection/: Cargo.toml  README.md
scm/domain-query/: CHANGELOG.md  Cargo.toml  README.md
scm/domain-registry/: Cargo.toml  README.md
scm/domain-repository/: Cargo.toml
scm/domain-saga/: Cargo.toml  README.md
scm/domain-security/: CHANGELOG.md  Cargo.toml  README.md
scm/domain-service/: CHANGELOG.md  Cargo.toml
scm/domain-snapshot/: CHANGELOG.md  Cargo.toml
scm/domain-validator/: CHANGELOG.md  Cargo.toml
scm/domain-valueobject/: Cargo.toml
scm/domain-vpn/: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  bootstrap.ps1  bootstrap.sh  deny.toml
scm/edge-domain/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
scm/edge-domain-clock/: CHANGELOG.md
scm/edge-domain-command/: CHANGELOG.md  Cargo.toml
scm/edge-domain-event/: CHANGELOG.md  README.md
scm/edge-domain-handler/: Cargo.toml  README.md
scm/edge-domain-lifecycle/: CHANGELOG.md  README.md
scm/edge-domain-policy/: CHANGELOG.md  README.md
scm/edge-domain-projection/: CHANGELOG.md  Cargo.toml
scm/edge-domain-query/: Cargo.toml
scm/edge-domain-registry/: CHANGELOG.md
scm/edge-domain-repository/: CHANGELOG.md  README.md
scm/edge-domain-saga/: CHANGELOG.md  Cargo.toml
scm/edge-domain-security/: CHANGELOG.md  Cargo.toml  README.md
scm/edge-domain-service/: Cargo.toml  README.md
scm/edge-domain-snapshot/: Cargo.toml  README.md
scm/edge-domain-validator/: Cargo.toml  README.md
scm/edge-domain-valueobject/: README.md
scm/handler/: CHANGELOG.md
scm/observer/: Cargo.toml  README.md
scm/projection/: Cargo.toml
scm/registry/: Cargo.toml
scm/saga/: Cargo.toml
scm/tests/: aggregate_svc_int_test.rs  api_types_coverage_int_test.rs  application_config_int_test.rs  closed_event_source_int_test.rs  command_svc_int_test.rs  direct_command_bus_int_test.rs  domain_event_svc_int_test.rs  domain_extension_int_test.rs  domain_extension_svc_int_test.rs  edge_domain_entity_int_test.rs  edge_domain_valueobject_int_test.rs  error_bridge_int_test.rs  event_bus_config_int_test.rs  event_bus_svc_int_test.rs  event_emitting_handler_int_test.rs  event_publisher_int_test.rs  event_publisher_svc_int_test.rs  event_receiver_int_test.rs  event_source_svc_int_test.rs  event_store_error_int_test.rs  fixed_clock_int_test.rs  handler_registry_int_test.rs  in_memory_projection_int_test.rs  in_memory_saga_registry_int_test.rs  in_process_handler_registry_int_test.rs  non_empty_string_e2e_test.rs  paired_handler_int_test.rs  policy_svc_int_test.rs  policy_violation_int_test.rs  projection_svc_int_test.rs  query_error_int_test.rs  queryable_repository_svc_int_test.rs  repository_svc_int_test.rs  request_context_builder_int_test.rs  request_context_int_test.rs  saga_registry_svc_int_test.rs  saga_svc_int_test.rs  service_registry_svc_int_test.rs  snapshot_svc_int_test.rs  spec_svc_int_test.rs  (+13 more)
scm/validator/: Cargo.toml
(+4872 files in other folders)
