[package]
name = "edge-domain"
version = "0.1.0"
edition = "2021"
license      = "MIT OR Apache-2.0"
repository = "https://github.com/sweengineeringlabs/edge"
authors = ["SWE Engineering Labs"]
rust-version = "1.95"
description = "edge — L2 Domain: business logic contracts (Handler, Service, Repository, Event, Command/Query)"
keywords = ["domain", "handler", "business-logic", "sea", "swe"]
categories = ["development-tools"]

[dependencies]
thiserror   = "2"
futures     = "0.3"
parking_lot = "0.12"
tokio       = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
futures = "0.3"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[test]]
name = "echo_handler_int_test"
path = "test/echo_handler_int_test.rs"

[[test]]
name = "handler_registry_int_test"
path = "test/handler_registry_int_test.rs"

[[test]]
name = "outbound_registry_int_test"
path = "test/outbound_registry_int_test.rs"

[[test]]
name = "edge_domain_svc_int_test"
path = "test/edge_domain_svc_int_test.rs"

[[test]]
name = "handler_trait_int_test"
path = "test/handler_trait_int_test.rs"

[[test]]
name = "validator_test"
path = "test/validator_test.rs"

[[test]]
name = "repository_int_test"
path = "test/repository_int_test.rs"

[[test]]
name = "service_int_test"
path = "test/service_int_test.rs"

[[test]]
name = "event_publisher_int_test"
path = "test/event_publisher_int_test.rs"

[[test]]
name = "event_store_int_test"
path = "test/event_store_int_test.rs"

[[test]]
name = "event_bus_int_test"
path = "test/event_bus_int_test.rs"

[[test]]
name = "in_memory_event_store_int_test"
path = "test/in_memory_event_store_int_test.rs"

[[test]]
name = "command_query_int_test"
path = "test/command_query_int_test.rs"

[[test]]
name = "error_bridge_int_test"
path = "test/error_bridge_int_test.rs"

[[test]]
name = "default_impls_int_test"
path = "test/default_impls_int_test.rs"

[[test]]
name = "command_error_int_test"
path = "test/command_error_int_test.rs"

[[test]]
name = "event_error_int_test"
path = "test/event_error_int_test.rs"

[[test]]
name = "query_error_int_test"
path = "test/query_error_int_test.rs"

[[test]]
name = "repository_error_int_test"
path = "test/repository_error_int_test.rs"

[[test]]
name = "service_error_int_test"
path = "test/service_error_int_test.rs"

[[test]]
name = "repository_page_int_test"
path = "test/repository_page_int_test.rs"

[[test]]
name = "queryable_repository_int_test"
path = "test/queryable_repository_int_test.rs"

[[test]]
name = "in_memory_repository_int_test"
path = "test/in_memory_repository_int_test.rs"

[[test]]
name = "domain_svc_int_test"
path = "test/domain_svc_int_test.rs"

[[test]]
name = "api_types_coverage_int_test"
path = "test/api_types_coverage_int_test.rs"

[[test]]
name = "api_config_types_int_test"
path = "test/api_config_types_int_test.rs"

[[example]]
name = "handler_registry"
path = "examples/handler_registry.rs"

[[example]]
name = "event_bus_consumer"
path = "examples/event_bus_consumer.rs"

[[example]]
name = "custom_event_bus"
path = "examples/custom_event_bus.rs"

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "handler"

[lib]
path = "src/lib.rs"
