[workspace]
resolver = "2"
members  = ["main/domain"]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge"

[workspace.metadata.struct-engine.config.whitelist.project]
entries = ["Cargo.lock"]

[workspace.lints.rust]
unsafe_code  = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
