[workspace]
resolver = "2"
members  = [
    "domain-app",
    "edge-domain",
    "domain/llm/agents",
    "domain/llm/complete",
    "domain/llm/provider",
    "domain/llm/prompt",
    "domain/llm/reasoning",
    "domain-entity",
    "domain-valueobject",
    "domain-validator",
    "domain-clock",
    "domain-policy",
    "domain-command",
    "domain-query",
    "domain-snapshot",
    "domain-service",
    "domain-repository",
    "domain-handler",
    "domain-event",
    "domain-projection",
    "domain-saga",
    "domain-security",
    "domain-registry",
    "domain-lifecycle",
    "domain-observer",
    "domain-vpn",
]

[workspace.package]
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge-domain"

[workspace.lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.dependencies]
thiserror   = "2"
async-trait = "0.1"
futures     = "0.3"
parking_lot = "0.12"
tokio       = { version = "1", features = ["sync", "time"] }
tracing     = "0.1"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
edge-domain-app         = { path = "domain-app" }
edge-domain-entity      = { path = "domain-entity" }
edge-domain-valueobject = { path = "domain-valueobject" }
edge-domain-clock       = { path = "domain-clock" }
edge-domain-validator   = { path = "domain-validator" }
edge-domain-policy      = { path = "domain-policy" }
edge-domain-command     = { path = "domain-command" }
edge-domain-query       = { path = "domain-query" }
edge-domain-snapshot    = { path = "domain-snapshot" }
edge-domain-service     = { path = "domain-service" }
edge-domain-repository  = { path = "domain-repository" }
edge-domain-handler     = { path = "domain-handler" }
edge-domain-event       = { path = "domain-event" }
edge-pipeline           = { git = "https://github.com/sweengineeringlabs/edge-pipeline.git", tag = "v0.2.0" }
edge-domain-projection  = { path = "domain-projection" }
edge-domain-saga        = { path = "domain-saga" }
edge-domain-security    = { path = "domain-security" }
edge-domain-registry    = { path = "domain-registry" }
edge-domain-lifecycle   = { path = "domain-lifecycle" }
edge-llm-agent          = { path = "domain/llm/agents" }
edge-llm-complete       = { path = "domain/llm/complete" }
edge-llm-provider       = { path = "domain/llm/provider" }
edge-llm-prompt         = { path = "domain/llm/prompt" }
edge-llm-reasoning      = { path = "domain/llm/reasoning" }
edge-domain-observer    = { path = "domain-observer" }
edge-domain-vpn         = { path = "domain-vpn" }
swe-edge-configbuilder  = { git = "https://github.com/sweengineeringlabs/edge-configbuilder.git", tag = "v0.4.1" }

# ── Development override — use local path when building inside the swe-edge assembly
[patch."https://github.com/sweengineeringlabs/edge-configbuilder.git"]
swe-edge-configbuilder = { path = "../../configbuilder/scm" }
