[workspace]
resolver = "2"
members  = [
    "domain-app",
    "edge-domain",
    "domain-base",
    "domain-entity",
    "domain-valueobject",
    "domain-validator",
    "domain-clock",
    "domain-policy",
    "domain-command",
    "domain-query",
    "domain-snapshot",
    "domain-service",
    "domain-repository",
    "domain-handler",
    "domain-event",
    "domain-projection",
    "domain-saga",
    "domain-registry",
    "domain-lifecycle",
    "domain-observer",
]

[workspace.package]
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge-application"

[workspace.lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.dependencies]
thiserror   = "2"
async-trait = "0.1"
futures     = "0.3"
parking_lot = "0.12"
tokio       = { version = "1", features = ["sync", "time"] }
tracing     = "0.1"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
edge-application-app         = { path = "domain-app" }
edge-application-base        = { path = "domain-base" }
edge-application-entity      = { path = "domain-entity" }
edge-application-valueobject = { path = "domain-valueobject" }
edge-application-clock       = { path = "domain-clock" }
edge-application-validator   = { path = "domain-validator" }
edge-application-policy      = { path = "domain-policy" }
edge-application-command     = { path = "domain-command" }
edge-application-query       = { path = "domain-query" }
edge-application-snapshot    = { path = "domain-snapshot" }
edge-application-service     = { path = "domain-service" }
edge-application-repository  = { path = "domain-repository" }
edge-application-handler     = { path = "domain-handler" }
edge-application-event       = { path = "domain-event" }
edge-pipeline           = { git = "https://github.com/sweengineeringlabs/edge-pipeline.git", tag = "v0.2.0" }
edge-application-projection  = { path = "domain-projection" }
edge-application-saga        = { path = "domain-saga" }
edge-security-runtime   = { git = "https://github.com/sweengineeringlabs/edge-security.git", tag = "v0.3.7" }
edge-security-authn     = { git = "https://github.com/sweengineeringlabs/edge-security.git", tag = "v0.3.7" }
edge-security-authz     = { git = "https://github.com/sweengineeringlabs/edge-security.git", tag = "v0.3.7" }
edge-application-registry    = { path = "domain-registry" }
edge-application-lifecycle   = { path = "domain-lifecycle" }
edge-application-observer    = { path = "domain-observer" }
swe-edge-configbuilder  = { git = "https://github.com/sweengineeringlabs/edge-configbuilder.git", tag = "v0.4.2" }
