[workspace]
resolver = "2"
members  = [
    "app",
    "edge-domain",
    "base",
    "entity",
    "valueobject",
    "validator",
    "clock",
    "policy",
    "command",
    "query",
    "snapshot",
    "repository",
    "handler",
    "event",
    "projection",
    "saga",
    "registry",
    "lifecycle",
    "observer",
    "examples/service-query",
]

[workspace.package]
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge-application"

[workspace.lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.dependencies]
thiserror   = "2"
async-trait = "0.1"
futures     = "0.3"
parking_lot = "0.12"
tokio       = { version = "1", features = ["sync", "time"] }
tracing     = "0.1"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
edge-application-app         = { path = "app" }
edge-application-base        = { path = "base" }
edge-application-entity      = { path = "entity" }
edge-application-valueobject = { path = "valueobject" }
edge-application-clock       = { path = "clock" }
edge-application-validator   = { path = "validator" }
edge-application-policy      = { path = "policy" }
edge-application-command     = { path = "command" }
edge-application-query       = { path = "query" }
edge-application-snapshot    = { path = "snapshot" }
edge-application-repository  = { path = "repository" }
edge-application-handler     = { path = "handler" }
edge-application-event       = { path = "event" }
edge-pipeline           = { git = "https://github.com/sweengineeringlabs/edge-pipeline.git", tag = "v0.2.0" }
edge-application-projection  = { path = "projection" }
edge-application-saga        = { path = "saga" }
edge-security-runtime   = { git = "https://github.com/sweengineeringlabs/edge-security.git", tag = "v0.3.7" }
edge-security-authn     = { git = "https://github.com/sweengineeringlabs/edge-security.git", tag = "v0.3.7" }
edge-security-authz     = { git = "https://github.com/sweengineeringlabs/edge-security.git", tag = "v0.3.7" }
edge-application-registry    = { path = "registry" }
edge-application-lifecycle   = { path = "lifecycle" }
edge-application-observer    = { path = "observer" }
swe-edge-configbuilder  = { git = "https://github.com/sweengineeringlabs/edge-configbuilder.git", tag = "v0.4.2" }
