[package]
name         = "edge-domain"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "edge — L2 Domain: business logic contracts (Handler, Service, Repository, Event, Command/Query)"
keywords     = ["domain", "handler", "business-logic", "sea", "swe"]
categories   = ["development-tools"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "handler"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror   = "2"
async-trait = "0.1"
futures     = "0.3"
parking_lot = "0.12"
tokio       = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio   = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
futures = "0.3"

[lints]
workspace = true
