[package]
name         = "edge-application-base"
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge-application"
description  = "edge-domain — Request/Response marker-trait contract shared by domain-handler and domain-service"
keywords     = ["domain", "base", "sea", "swe"]
categories   = ["development-tools"]

[package.metadata.arch]
application_type = "lib"
service_type     = "base"

[lib]
path = "main/src/lib.rs"

[dependencies]

[dev-dependencies]
# no async needed for base tests

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
