[package]
name                   = "edge-domain-app"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "edge-domain — Application boot contract: Application and SvcFactory traits"
keywords    = ["domain", "application", "factory", "sea", "swe"]
categories  = ["development-tools"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "service"

[lib]
path = "main/src/lib.rs"

[dependencies]
futures.workspace   = true
thiserror.workspace = true

[dev-dependencies]
futures.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
