[package]
name         = "edge-application-entity"
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge-application"
description  = "edge-domain — Entity port contract: identity-bearing domain object trait"
keywords     = ["domain", "entity", "sea", "swe"]
categories   = ["development-tools"]

[package.metadata.arch]
application_type = "lib"
service_type     = "entity"

[lib]
path = "main/src/lib.rs"

[dependencies]
serde.workspace = true

[dev-dependencies]
# no async needed for entity tests

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
