[package]
name                   = "edge-application-event"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "edge-domain — Event port contract: event sourcing, CQRS event bus, publish/subscribe"
keywords    = ["domain", "event", "event-sourcing", "sea", "swe"]
categories  = ["development-tools"]

[package.metadata.arch]
application_type = "lib"
service_type     = "event"

[lib]
path = "main/src/lib.rs"

[dependencies]
async-trait.workspace  = true
futures.workspace      = true
parking_lot.workspace  = true
thiserror.workspace    = true
tokio.workspace        = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
