[package]
name                   = "edge-domain-handler"
version                = "0.1.1"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "edge-domain — Handler port contract: request/response execution units with registry and context"
keywords    = ["domain", "handler", "registry", "sea", "swe"]
categories  = ["development-tools"]

[package.metadata.arch]
application_type = "lib"
service_type     = "handler"
[lib]
path = "main/src/lib.rs"

[dependencies]
async-trait.workspace        = true
thiserror.workspace          = true
parking_lot.workspace        = true
edge-domain-command.workspace  = true
edge-domain-observer.workspace  = true
edge-security-runtime.workspace = true
edge-domain-service.workspace  = true

[dev-dependencies]
tokio   = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
futures.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
