[package]
name                   = "edge-domain-pipeline"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "edge-domain — Pipeline port contract: immediate/synchronous step-chain orchestration"
keywords    = ["domain", "pipeline", "orchestration", "sea", "swe"]
categories  = ["development-tools"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "pipeline"

[lib]
path = "main/src/lib.rs"

[dependencies]
async-trait.workspace = true
thiserror.workspace   = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
