[package]
name                   = "edge-application-policy"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "edge-domain — Policy port contract: named, testable business rules with AND-composition"
keywords    = ["domain", "policy", "business-rule", "sea", "swe"]
categories  = ["development-tools"]

[package.metadata.arch]
application_type = "lib"
service_type     = "policy"

[lib]
path = "main/src/lib.rs"

[dependencies]
serde.workspace     = true
thiserror.workspace = true

[dev-dependencies]
# no async needed for policy tests

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
