[package]
name                   = "edge-application-projection"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "edge-domain — Projection port contract: CQRS read-model builder driven by domain events"
keywords    = ["domain", "projection", "cqrs", "sea", "swe"]
categories  = ["development-tools"]

[package.metadata.arch]
application_type = "lib"
service_type     = "projection"

[lib]
path = "main/src/lib.rs"

[dependencies]
thiserror.workspace    = true
edge-application-event = { path = "../domain-event" }

[dev-dependencies]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
