[package]
name                   = "edge-application-query"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "edge-domain — Query port contract: CQRS read-side with QueryBus and DirectQueryBus"
keywords    = ["domain", "query", "cqrs", "sea", "swe"]
categories  = ["development-tools"]

[package.metadata.arch]
application_type = "lib"
service_type     = "query"

[lib]
path = "main/src/lib.rs"

[dependencies]
async-trait.workspace = true
futures.workspace     = true
serde.workspace       = true
thiserror.workspace   = true
tracing.workspace     = true

[dev-dependencies]
tokio   = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
futures.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
