[package]
name                   = "edge-domain-repository"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "edge-domain — Repository port contract: data access with InMemoryRepository, Page, and Spec"
keywords    = ["domain", "repository", "data-access", "sea", "swe"]
categories  = ["development-tools"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "repository"

[lib]
path = "main/src/lib.rs"

[dependencies]
futures.workspace     = true
thiserror.workspace   = true
parking_lot.workspace = true

[dev-dependencies]
tokio   = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
futures.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
