[package]
name                   = "edge-domain-security"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "edge-domain — Security port contract: Principal identity + SecurityContext carrier"
keywords    = ["domain", "security", "principal", "context", "swe"]
categories  = ["development-tools"]

[package.metadata.arch]
application_type = "lib"
service_type     = "primitives"

[lib]
path = "main/src/lib.rs"

[dependencies]
thiserror.workspace = true

[dev-dependencies]
# no async needed for security tests

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
