[package]
name                   = "edge-domain-service"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "edge-domain — Service port contract: named domain operations with ServiceRegistry"
keywords    = ["domain", "service", "registry", "sea", "swe"]
categories  = ["development-tools"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "service"

[package.metadata.arch]
application_type = "lib"
service_type     = "service"

[lib]
path = "main/src/lib.rs"

[dependencies]
futures.workspace     = true
thiserror.workspace   = true
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
