[package]
name                   = "edge-application-snapshot"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "edge-domain — Snapshot port contract: point-in-time aggregate state capture for event replay optimisation"
keywords    = ["domain", "snapshot", "event-sourcing", "sea", "swe"]
categories  = ["development-tools"]

[package.metadata.arch]
application_type = "lib"
service_type     = "snapshot"

[lib]
path = "main/src/lib.rs"

[dependencies]
futures.workspace   = true
serde.workspace     = true
thiserror.workspace = true

[dev-dependencies]
tokio   = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
futures.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
