[package]
name         = "edge-domain-valueobject"
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge-domain"
description  = "edge-domain — ValueObject port contract and NonEmptyString reference implementation"
keywords     = ["domain", "value-object", "sea", "swe"]
categories   = ["development-tools"]

[package.metadata.arch]
application_type = "lib"
service_type     = "valueobject"

[lib]
path = "main/src/lib.rs"

[dev-dependencies]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
