[package]
name                   = "edge-application-vpn"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "edge-domain — VPN port contract: TunnelManager trait, VpnClientConfig OptionalSection, noop adapter"
keywords    = ["domain", "vpn", "wireguard", "tunnel", "sea"]
categories  = ["network-programming"]

[package.metadata.arch]
application_type = "lib"
service_type     = "vpn"

[lib]
path = "main/src/lib.rs"

[dependencies]
thiserror.workspace    = true
async-trait.workspace  = true
serde.workspace        = true
base64 = "0.22"
swe-edge-configbuilder.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
