[package]
name                   = "edge-domain-command"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "edge-domain — Command port contract: CQRS write-side with CommandBus and DirectCommandBus"
keywords    = ["domain", "command", "cqrs", "sea", "swe"]
categories  = ["development-tools"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "command"

[lib]
path = "main/src/lib.rs"

[dependencies]
async-trait.workspace = true
futures.workspace     = true
thiserror.workspace   = true

[dev-dependencies]
tokio   = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
futures.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
