[package]
name                   = "edge-domain-saga"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "edge-domain — Saga port contract: long-running process manager driven by events and commands"
keywords    = ["domain", "saga", "process-manager", "sea", "swe"]
categories  = ["development-tools"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "saga"

[lib]
path = "main/src/lib.rs"

[dependencies]
futures.workspace     = true
thiserror.workspace   = true
edge-domain-event   = { path = "../edge-domain-event" }
edge-domain-command = { path = "../edge-domain-command" }

[dev-dependencies]
futures.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
